@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

title US050 - Class Diagram

class AiSafeBootstrap {
    +{static} main(args : String[]) : void
}

class RegisterAirControlAreaUI {
    # doShow() : boolean
}

class RegisterAirControlAreaController {
    + registerAirControlArea(areaCode, name, minimumFuel, northLat, southLat, eastLong, westLong) : AirControlArea
}

class AirControlAreaCode <<value object, identity>> {
    - code : String
    + {static} valueOf(code : String) : AirControlAreaCode
    + toString() : String
}

class AirControlArea <<entity>> <<aggregate root>> {
    - areaCode : AirControlAreaCode <<@EmbeddedId>>
    - name : String
    - minimumFuelRequired : double
    - version : Long <<@Version>>
    + AirControlArea(areaCode, name, minimumFuel, boundaries)
    + identity() : AirControlAreaCode
}

class GeoBoundary <<value object>> {
    - northLatitude : double
    - southLatitude : double
    - eastLongitude : double
    - westLongitude : double
    + GeoBoundary(north, south, east, west)
}

interface AirControlAreaRepository <<repository>> {
    + save(entity: AirControlArea) : AirControlArea
}

' Relações de Dependência da Aplicação
RegisterAirControlAreaUI .down.> RegisterAirControlAreaController
RegisterAirControlAreaController .down.> AirControlArea
RegisterAirControlAreaController .down.> GeoBoundary
RegisterAirControlAreaController .down.> AirControlAreaRepository
AiSafeBootstrap .down.> AirControlArea
AiSafeBootstrap .down.> GeoBoundary
AiSafeBootstrap .down.> AirControlAreaRepository

' Relações do Domínio
AirControlArea "1" *-- "1" AirControlAreaCode : identified by >
AirControlArea "1" *-- "1" GeoBoundary : bounded by >
AirControlAreaRepository "1" --> "*" AirControlArea : stores >

@enduml